--- a/user_table.html
+++ b/user_table.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-    	<meta charset="utf-8">
-    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    	<meta name="viewport" content="width=device-width, initial-scale=1">
-    	<meta name="description" content="">
-    	<meta name="author" content="">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <meta name="author" content="">
         <script type="text/javascript" src="http://www.google.com/jsapi"></script>   
-    	<script type="text/javascript">
+        <script type="text/javascript">
             google.load('visualization', '1', {packages: ['corechart']});
-    		var mainDatabaseFusionTableID = "1OIi7vxHHfNYOCk_8kTnVMqZrw4hF7VlTxLsxPz-O"; // Table with product tracking info.
+            var mainDatabaseFusionTableID = "1OIi7vxHHfNYOCk_8kTnVMqZrw4hF7VlTxLsxPz-O"; // Table with product tracking info.
             var whatToGetFusionTableID = "1bm8y6K3bFzpbdRZLtV5VPZrNcXuuj1mjle-4-7de"; // Table with the list of items to be pulled from the main database to be shown on the product information table.
 
             function initialize(){
@@ -41,43 +41,43 @@
             }
 
             function getShirtInfo(key, whatToGet){
-      			var queryString = "SELECT " + whatToGet + " FROM " + mainDatabaseFusionTableID + " WHERE Design_Batch = '" + key.design_Batch + "' AND Start_ID <= '" + key.unique_ID + "' AND End_ID >= '" + key.unique_ID + "'";
-      			var query = new google.visualization.Query('http://www.google.com/fusiontables/gvizdata?tq=' + encodeURIComponent(queryString));   
-            	query.send(function (response){
+                var queryString = "SELECT " + whatToGet + " FROM " + mainDatabaseFusionTableID + " WHERE Design_Batch = '" + key.design_Batch + "' AND Start_ID <= '" + key.unique_ID + "' AND End_ID >= '" + key.unique_ID + "'";
+                var query = new google.visualization.Query('http://www.google.com/fusiontables/gvizdata?tq=' + encodeURIComponent(queryString));   
+                query.send(function (response){
                         var table = response.getDataTable();
                         var rows = table.getNumberOfRows();
                         alert(table.getvalue(0,0));
                 });
                 //return table;
-    		}
+            }
             // TODO Add parsing function for the key.
-    		function parseKey(key){
-    			var isKeyOK = true;
-    			if (!isKeyOK){
-    				showParseError();
-    			}
-    			return isKeyOK;
-    		}
-    		function getKeyFromForm(){
+            function parseKey(key){
+                var isKeyOK = true;
+                if (!isKeyOK){
+                    showParseError();
+                }
+                return isKeyOK;
+            }
+            function getKeyFromForm(){
                 var key = {
                     design_Batch : document.getElementById("design_Batch").value,
                     unique_ID : document.getElementById("unique_ID").value,
                 };
-    			return key;
-    		}
-    		function onShowButtonClick(){
-    			var key = getKeyFromForm();
-    			if (parseKey(key)) {
-    				var info = getShirtInfo(key, "whatToGet");
-    				fillTable("processesToShow", "infoToshow", "info");
-    			}
-    		}
-    		function showParseError(){
+                return key;
+            }
+            function onShowButtonClick(){
+                var key = getKeyFromForm();
+                if (parseKey(key)) {
+                    var info = getShirtInfo(key, "whatToGet");
+                    fillTable("processesToShow", "infoToshow", "info");
+                }
+            }
+            function showParseError(){
 
-    		}
-    		function fillTable(processesToShow, infoToshow, info){
+            }
+            function fillTable(processesToShow, infoToshow, info){
                 processesToShow = ["Fabric production","Manufacture"];
-                infoToshow = ["Process", "In charge", "Location", "Time", "Number of hands"];
+                infoToshow = ["Process", "In charge", "Location", "Time", "Number of hands"]
 
                 var tableHead = document.getElementById("garment_info_table_head");
                 tableHead.removeChild(tableHead.firstChild);        
@@ -92,25 +92,25 @@
 
                 var tableBody = document.getElementById("garment_info_table_body");
                 for(var i = 0; i < processesToShow.length; i++){
-                    var Row = document.createElement("tr");
-                    for(var j = 0; j < processesToShow.length; j++){   
-                        var cell document.createElement("td");
-                        var document.createTextNode(infoToshow[i,j]);
+                    var row = document.createElement("tr");
+                    for(var j = 0; j < infoToshow.length; j++){   
+                        var cell = document.createElement("td");
+                        var textnode = document.createTextNode(infoToshow[j]);
                         cell.appendChild(textnode);
-                        Row.appendChild(cell);
+                        row.appendChild(cell);
                     }
-                    tableBody.appendChild(Row);
+                    tableBody.appendChild(row);
                 }
 
             }
-    	</script>     
+        </script>     
     </head>
     <body role="document" onload="initialize()">
-    	<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-  				Design Batch: <input type="text" name="design_Batch" id="design_Batch"><br>
-  				Unique id: <input type="number" name="unique_ID" id="unique_ID"><br>
-  				<input type="button" value="Submit" onclick="onShowButtonClick()">
-    	</div>
+        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+                Design Batch: <input type="text" name="design_Batch" id="design_Batch"><br>
+                Unique id: <input type="number" name="unique_ID" id="unique_ID"><br>
+                <input type="button" value="Submit" onclick="onShowButtonClick()">
+        </div>
         <table>
             <thead id="garment_info_table_head">
             </thead>
