--- a/user_table.html
+++ b/user_table.html
@@ -122,8 +122,11 @@
         </script>     
     </head>
     <body role="document" onload="initialize()">
-        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div>
+                Textile: <input type="text" name="textile" id="textile"><br>
+                Style: <input type="text" name="style" id="style"><br>
                 Design Batch: <input type="text" name="design_Batch" id="design_Batch"><br>
+                Size: <input type="text" name="size" id="size"><br>
                 Unique id: <input type="number" name="unique_ID" id="unique_ID"><br>
                 <input type="button" value="Submit" onclick="onShowButtonClick()">
         </div>
