--- a/user_table.html
+++ b/user_table.html
@@ -61,9 +61,8 @@
                             for (var i=0; i < columnNames.length; i++){
                                 stepsArray[j][columnNames[i]] = table.getValue(j,i);
                             }
-                            alert("yei " + stepsArray[j].HASHTAG);
+                            alert("yei " + stepsArray[j].STEP_DESC);
                         }
-
                         //fillTable(stepsToShow, "infoToshow", info);
                 });
                 //return table;
